# bevy-visual-novel

./: Cargo.toml  README.md
asets/: en.csv  visual-novel-example.db
assets/: en.csv  visual-novel-example.db
script/: cuentitos.toml  visual-novel-example.cuentitos
src/: database_asset.rs  lib.rs  main.rs
