[package]
name = "bevy-visual-novel"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_visual_novel"
path = "src/lib.rs"

[[bin]]
name = "visual-novel"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_ui", "bevy_asset", "bevy_text", "bevy_scene", "png", "vorbis", "bevy_sprite", "bevy_winit", "mp3", "x11"] }
cuentitos-runtime = { path = "../cuentitos/runtime" }
serde = { version = "1.0", features = ["derive"] }
